Added functionality to the FAQ section.

--- a/STUDYspace website/faq.html
+++ b/STUDYspace website/faq.html
@@ -39,74 +39,153 @@
     <p>Welcome to our <span class = "outspan"><span class = "inspan">Frequently Asked Questions</span></span> page! Here you can find the who, what,
       when, how and why regarding <span class = "outspan"><span class = "inspan">STUDY</span>space</span>. If you are unable to find the answers you area
     looking for, please email us <a href="help.html"><span class = "outspan"><span class = "inspan">here</span></span></a> and we will be sure to get back to you ASAP!</p>
-  </section>
 
-  <section class = "qa">
-    <div class = "question">
-      <h4>What is <span class = "outspan"><span class = "inspan">STUDY</span>space</span>?</h4>
-      <i class="faq fa-solid fa-angle-down"></i>
-    </div>
 
-    <div class = "question">
-      <h4>Why should I use <span class = "outspan"><span class = "inspan">STUDY</span>space</span>?</h4>
-      <i class="faq fa-solid fa-angle-down"></i>
-    </div>
+    <div class = "accordian">
+      <div class = "accordian-item">
+        <button class = "accordian-header">
+          <strong>What is STUDYspace?</strong> <i class="faq fa-solid fa-angle-down"></i>
+        </button>
+        <div class="accordian-body">
+          STUDYspace is a procrastination-prevention/productivity program which attempts to help students struggling to stay on track and tackle procrastination.
+          We attempt to help you study distraction free by getting you to select the websites of your choice that pose the biggest threat to your productivity. We then block these websites until you choose to
+          disable it or until a time which is also chosen by you runs out.
+        </div>
+      </div>
 
-    <div class = "question">
-      <h4>How does <span class = "outspan"><span class = "inspan">STUDY</span>space</span> differ from other productivity browser extensions or apps?</h4>
-      <i class="faq fa-solid fa-angle-down"></i>
-    </div>
+      <div class = "accordian-item">
+        <button class = "accordian-header">
+          <strong>Why should I use STUDYspace?</strong> <i class="faq fa-solid fa-angle-down"></i>
+        </button>
+        <div class="accordian-body">
+          STUDYspace is a procrastination-prevention/productivity program which attempts to help students struggling to stay on track and tackle procrastination.
+          We attempt to help you study distraction free by getting you to select the websites of your choice that pose the biggest threat to your productivity. We then block these websites until you choose to
+          disable it or until a time which is also chosen by you runs out.
+        </div>
+      </div>
 
-    <div class = "question">
-      <h4>Can I download <span class = "outspan"><span class = "inspan">STUDY</span>space</span>?</h4>
-      <i class="faq fa-solid fa-angle-down"></i>
-    </div>
+      <div class = "accordian-item">
+        <button class = "accordian-header">
+          <strong>How does STUDYspace differ from other productivity browser extensions or apps?</strong> <i class="faq fa-solid fa-angle-down"></i>
+        </button>
+        <div class="accordian-body">
+          STUDYspace is a procrastination-prevention/productivity program which attempts to help students struggling to stay on track and tackle procrastination.
+          We attempt to help you study distraction free by getting you to select the websites of your choice that pose the biggest threat to your productivity. We then block these websites until you choose to
+          disable it or until a time which is also chosen by you runs out.
+        </div>
+      </div>
 
-    <div class = "question">
-      <h4>Is <span class = "outspan"><span class = "inspan">STUDY</span>space</span> free?</h4>
-      <i class="faq fa-solid fa-angle-down"></i>
-    </div>
+      <div class = "accordian-item">
+        <button class = "accordian-header">
+          <strong>Can I download STUDYspace?</strong> <i class="faq fa-solid fa-angle-down"></i>
+        </button>
+        <div class="accordian-body">
+          STUDYspace is a procrastination-prevention/productivity program which attempts to help students struggling to stay on track and tackle procrastination.
+          We attempt to help you study distraction free by getting you to select the websites of your choice that pose the biggest threat to your productivity. We then block these websites until you choose to
+          disable it or until a time which is also chosen by you runs out.
+        </div>
+      </div>
 
-    <div class = "question">
-      <h4>Who is <span class = "outspan"><span class = "inspan">STUDY</span>space</span> aimed at?</h4>
-      <i class="faq fa-solid fa-angle-down"></i>
-    </div>
+      <div class = "accordian-item">
+        <button class = "accordian-header">
+          <strong>Is STUDYspace free?</strong> <i class="faq fa-solid fa-angle-down"></i>
+        </button>
+        <div class="accordian-body">
+          STUDYspace is a procrastination-prevention/productivity program which attempts to help students struggling to stay on track and tackle procrastination.
+          We attempt to help you study distraction free by getting you to select the websites of your choice that pose the biggest threat to your productivity. We then block these websites until you choose to
+          disable it or until a time which is also chosen by you runs out.
+        </div>
+      </div>
 
-    <div class = "question">
-      <h4>When will <span class = "outspan"><span class = "inspan">STUDY</span>space</span> be available?</h4>
-      <i class="faq fa-solid fa-angle-down"></i>
-    </div>
+      <div class = "accordian-item">
+        <button class = "accordian-header">
+          <strong>Who is STUDYspace aimed at?</strong> <i class="faq fa-solid fa-angle-down"></i>
+        </button>
+        <div class="accordian-body">
+          STUDYspace is a procrastination-prevention/productivity program which attempts to help students struggling to stay on track and tackle procrastination.
+          We attempt to help you study distraction free by getting you to select the websites of your choice that pose the biggest threat to your productivity. We then block these websites until you choose to
+          disable it or until a time which is also chosen by you runs out.
+        </div>
+      </div>
 
-    <div class = "question">
-      <h4>What if a website I want blocked on <span class = "outspan"><span class = "inspan">STUDY</span>space</span> is not an option?</h4>
-      <i class="faq fa-solid fa-angle-down"></i>
-    </div>
+      <div class = "accordian-item">
+        <button class = "accordian-header">
+          <strong>When will STUDYspace be available?</strong> <i class="faq fa-solid fa-angle-down"></i>
+        </button>
+        <div class="accordian-body">
+          STUDYspace is a procrastination-prevention/productivity program which attempts to help students struggling to stay on track and tackle procrastination.
+          We attempt to help you study distraction free by getting you to select the websites of your choice that pose the biggest threat to your productivity. We then block these websites until you choose to
+          disable it or until a time which is also chosen by you runs out.
+        </div>
+      </div>
 
-    <div class = "question">
-      <h4>Can I make mode or website suggestions for <span class = "outspan"><span class = "inspan">STUDY</span>space</span>?</h4>
-      <i class="faq fa-solid fa-angle-down"></i>
-    </div>
+      <div class = "accordian-item">
+        <button class = "accordian-header">
+          <strong>What if a website I want blocked on STUDYspace is not an option?</strong> <i class="faq fa-solid fa-angle-down"></i>
+        </button>
+        <div class="accordian-body">
+          STUDYspace is a procrastination-prevention/productivity program which attempts to help students struggling to stay on track and tackle procrastination.
+          We attempt to help you study distraction free by getting you to select the websites of your choice that pose the biggest threat to your productivity. We then block these websites until you choose to
+          disable it or until a time which is also chosen by you runs out.
+        </div>
+      </div>
 
-    <div class = "question">
-      <h4>How do I set up a <span class = "outspan"><span class = "inspan">STUDY</span>space</span> account?</h4>
-      <i class="faq fa-solid fa-angle-down"></i>
-    </div>
+      <div class = "accordian-item">
+        <button class = "accordian-header">
+          <strong>Can I make mode or website suggestions for STUDYspace?</strong> <i class="faq fa-solid fa-angle-down"></i>
+        </button>
+        <div class="accordian-body">
+          STUDYspace is a procrastination-prevention/productivity program which attempts to help students struggling to stay on track and tackle procrastination.
+          We attempt to help you study distraction free by getting you to select the websites of your choice that pose the biggest threat to your productivity. We then block these websites until you choose to
+          disable it or until a time which is also chosen by you runs out.
+        </div>
+      </div>
 
-    <div class = "question">
-      <h4>Can I switch from using <span class = "outspan"><span class = "inspan">STUDY</span>space</span> as a guest to creating an account?</h4>
-      <i class="faq fa-solid fa-angle-down"></i>
-    </div>
+      <div class = "accordian-item">
+        <button class = "accordian-header">
+          <strong>How do I set up a STUDYspace account?</strong> <i class="faq fa-solid fa-angle-down"></i>
+        </button>
+        <div class="accordian-body">
+          STUDYspace is a procrastination-prevention/productivity program which attempts to help students struggling to stay on track and tackle procrastination.
+          We attempt to help you study distraction free by getting you to select the websites of your choice that pose the biggest threat to your productivity. We then block these websites until you choose to
+          disable it or until a time which is also chosen by you runs out.
+        </div>
+      </div>
 
-    <div class = "question">
-      <h4>What is the difference between the <span class = "outspan"><span class = "inspan">STUDY</span>space</span> app and the browser extension?</h4>
-      <i class="faq fa-solid fa-angle-down"></i>
-    </div>
+      <div class = "accordian-item">
+        <button class = "accordian-header">
+          <strong>Can I switch from using STUDYspace as a guest to creating an account?</strong> <i class="faq fa-solid fa-angle-down"></i>
+        </button>
+        <div class="accordian-body">
+          STUDYspace is a procrastination-prevention/productivity program which attempts to help students struggling to stay on track and tackle procrastination.
+          We attempt to help you study distraction free by getting you to select the websites of your choice that pose the biggest threat to your productivity. We then block these websites until you choose to
+          disable it or until a time which is also chosen by you runs out.
+        </div>
+      </div>
 
-    <div class = "question">
-      <h4>Will <span class = "outspan"><span class = "inspan">STUDY</span>space</span> be available on Mobile?</h4>
-      <i class="faq fa-solid fa-angle-down"></i>
+      <div class = "accordian-item">
+        <button class = "accordian-header">
+          <strong>What is the difference between the STUDYspace app and the browser extension?</strong> <i class="faq fa-solid fa-angle-down"></i>
+        </button>
+        <div class="accordian-body">
+          STUDYspace is a procrastination-prevention/productivity program which attempts to help students struggling to stay on track and tackle procrastination.
+          We attempt to help you study distraction free by getting you to select the websites of your choice that pose the biggest threat to your productivity. We then block these websites until you choose to
+          disable it or until a time which is also chosen by you runs out.
+        </div>
+      </div>
+
+      <div class = "accordian-item">
+        <button class = "accordian-header">
+          <strong>Will STUDYspace be available on Mobile?</strong> <i class="faq fa-solid fa-angle-down"></i>
+        </button>
+        <div class="accordian-body">
+          STUDYspace is a procrastination-prevention/productivity program which attempts to help students struggling to stay on track and tackle procrastination.
+          We attempt to help you study distraction free by getting you to select the websites of your choice that pose the biggest threat to your productivity. We then block these websites until you choose to
+          disable it or until a time which is also chosen by you runs out.
+        </div>
+      </div>
     </div>
-  </section>
+    </section>
 
   <footer>
     <div class = "main-content">
@@ -163,5 +242,6 @@
     </div>
   </footer>
 
+  <script src="main.js" charset="utf-8"></script>
 </body>
 </html>
