--- a/STUDYspace website/Tests/test.html
+++ b/STUDYspace website/Tests/test.html
@@ -5,31 +5,156 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="test.css">
+  <script src="https://kit.fontawesome.com/33a06fc26a.js" crossorigin="anonymous"></script>
   <title>Test Nav</title>
 </head>
 <body>
-  <header class = "header">
-    <div class = "logo">
-      <a href="#"><span class = "inspan">STUDY</span>space</a>
+  <div class = "accordian">
+    <div class = "accordian-item">
+      <button class = "accordian-header">
+        <strong>What is STUDYspace?</strong> <i class="faq fa-solid fa-angle-down"></i>
+      </button>
+      <div class="accordian-body">
+        STUDYspace is a procrastination-prevention/productivity program which attempts to help students struggling to stay on track and tackle procrastination.
+        We attempt to help you study distraction free by getting you to select the websites of your choice that pose the biggest threat to your productivity. We then block these websites until you choose to
+        disable it or until a time which is also chosen by you runs out.
+      </div>
     </div>
 
-    <div class = "navigation">
-
-      <input type="checkbox" class = "toggle-menu">
-      <div class = "hamburger"></div>
-
-
-      <ul class = "menu">
-        <li><a href="#" class = "select"><i class="fa-solid fa-house"></i> Home</a></li>
-        <li><a href="#"><i class="fas fa-solid fa-circle-info"></i>About</a></li>
-        <li><a href="#"><i class="fas fa-solid fa-newspaper"></i>News</a></li>
-        <li><a href="#"><i class="fas fa-solid fa-download"></i>Download</a></li>
-        <li><a href="#"><i class="fas fa-solid fa-circle-question"></i>FAQ</a></li>
-        <li><a href="#"><i class="fas fa-solid fa-address-card"></i>Contact</a></li>
-      </ul>
+    <div class = "accordian-item">
+      <button class = "accordian-header">
+        <strong>Why should I use STUDYspace?</strong> <i class="faq fa-solid fa-angle-down"></i>
+      </button>
+      <div class="accordian-body">
+        STUDYspace is a procrastination-prevention/productivity program which attempts to help students struggling to stay on track and tackle procrastination.
+        We attempt to help you study distraction free by getting you to select the websites of your choice that pose the biggest threat to your productivity. We then block these websites until you choose to
+        disable it or until a time which is also chosen by you runs out.
+      </div>
     </div>
 
-  </header>
+    <div class = "accordian-item">
+      <button class = "accordian-header">
+        <strong>How does STUDYspace differ from other productivity browser extensions or apps?</strong> <i class="faq fa-solid fa-angle-down"></i>
+      </button>
+      <div class="accordian-body">
+        STUDYspace is a procrastination-prevention/productivity program which attempts to help students struggling to stay on track and tackle procrastination.
+        We attempt to help you study distraction free by getting you to select the websites of your choice that pose the biggest threat to your productivity. We then block these websites until you choose to
+        disable it or until a time which is also chosen by you runs out.
+      </div>
+    </div>
 
+    <div class = "accordian-item">
+      <button class = "accordian-header">
+        <strong>Can I download STUDYspace?</strong> <i class="faq fa-solid fa-angle-down"></i>
+      </button>
+      <div class="accordian-body">
+        STUDYspace is a procrastination-prevention/productivity program which attempts to help students struggling to stay on track and tackle procrastination.
+        We attempt to help you study distraction free by getting you to select the websites of your choice that pose the biggest threat to your productivity. We then block these websites until you choose to
+        disable it or until a time which is also chosen by you runs out.
+      </div>
+    </div>
+
+    <div class = "accordian-item">
+      <button class = "accordian-header">
+        <strong>Is STUDYspace free?</strong> <i class="faq fa-solid fa-angle-down"></i>
+      </button>
+      <div class="accordian-body">
+        STUDYspace is a procrastination-prevention/productivity program which attempts to help students struggling to stay on track and tackle procrastination.
+        We attempt to help you study distraction free by getting you to select the websites of your choice that pose the biggest threat to your productivity. We then block these websites until you choose to
+        disable it or until a time which is also chosen by you runs out.
+      </div>
+    </div>
+
+    <div class = "accordian-item">
+      <button class = "accordian-header">
+        <strong>Who is STUDYspace aimed at?</strong> <i class="faq fa-solid fa-angle-down"></i>
+      </button>
+      <div class="accordian-body">
+        STUDYspace is a procrastination-prevention/productivity program which attempts to help students struggling to stay on track and tackle procrastination.
+        We attempt to help you study distraction free by getting you to select the websites of your choice that pose the biggest threat to your productivity. We then block these websites until you choose to
+        disable it or until a time which is also chosen by you runs out.
+      </div>
+    </div>
+
+    <div class = "accordian-item">
+      <button class = "accordian-header">
+        <strong>When will STUDYspace be available?</strong> <i class="faq fa-solid fa-angle-down"></i>
+      </button>
+      <div class="accordian-body">
+        STUDYspace is a procrastination-prevention/productivity program which attempts to help students struggling to stay on track and tackle procrastination.
+        We attempt to help you study distraction free by getting you to select the websites of your choice that pose the biggest threat to your productivity. We then block these websites until you choose to
+        disable it or until a time which is also chosen by you runs out.
+      </div>
+    </div>
+
+    <div class = "accordian-item">
+      <button class = "accordian-header">
+        <strong>What if a website I want blocked on STUDYspace is not an option?</strong> <i class="faq fa-solid fa-angle-down"></i>
+      </button>
+      <div class="accordian-body">
+        STUDYspace is a procrastination-prevention/productivity program which attempts to help students struggling to stay on track and tackle procrastination.
+        We attempt to help you study distraction free by getting you to select the websites of your choice that pose the biggest threat to your productivity. We then block these websites until you choose to
+        disable it or until a time which is also chosen by you runs out.
+      </div>
+    </div>
+
+    <div class = "accordian-item">
+      <button class = "accordian-header">
+        <strong>Can I make mode or website suggestions for STUDYspace?</strong> <i class="faq fa-solid fa-angle-down"></i>
+      </button>
+      <div class="accordian-body">
+        STUDYspace is a procrastination-prevention/productivity program which attempts to help students struggling to stay on track and tackle procrastination.
+        We attempt to help you study distraction free by getting you to select the websites of your choice that pose the biggest threat to your productivity. We then block these websites until you choose to
+        disable it or until a time which is also chosen by you runs out.
+      </div>
+    </div>
+
+    <div class = "accordian-item">
+      <button class = "accordian-header">
+        <strong>How do I set up a STUDYspace account?</strong> <i class="faq fa-solid fa-angle-down"></i>
+      </button>
+      <div class="accordian-body">
+        STUDYspace is a procrastination-prevention/productivity program which attempts to help students struggling to stay on track and tackle procrastination.
+        We attempt to help you study distraction free by getting you to select the websites of your choice that pose the biggest threat to your productivity. We then block these websites until you choose to
+        disable it or until a time which is also chosen by you runs out.
+      </div>
+    </div>
+
+    <div class = "accordian-item">
+      <button class = "accordian-header">
+        <strong>Can I switch from using STUDYspace as a guest to creating an account?</strong> <i class="faq fa-solid fa-angle-down"></i>
+      </button>
+      <div class="accordian-body">
+        STUDYspace is a procrastination-prevention/productivity program which attempts to help students struggling to stay on track and tackle procrastination.
+        We attempt to help you study distraction free by getting you to select the websites of your choice that pose the biggest threat to your productivity. We then block these websites until you choose to
+        disable it or until a time which is also chosen by you runs out.
+      </div>
+    </div>
+
+    <div class = "accordian-item">
+      <button class = "accordian-header">
+        <strong>What is the difference between the STUDYspace app and the browser extension?</strong> <i class="faq fa-solid fa-angle-down"></i>
+      </button>
+      <div class="accordian-body">
+        STUDYspace is a procrastination-prevention/productivity program which attempts to help students struggling to stay on track and tackle procrastination.
+        We attempt to help you study distraction free by getting you to select the websites of your choice that pose the biggest threat to your productivity. We then block these websites until you choose to
+        disable it or until a time which is also chosen by you runs out.
+      </div>
+    </div>
+
+    <div class = "accordian-item">
+      <button class = "accordian-header">
+        <strong>Will STUDYspace be available on Mobile?</strong> <i class="faq fa-solid fa-angle-down"></i>
+      </button>
+      <div class="accordian-body">
+        STUDYspace is a procrastination-prevention/productivity program which attempts to help students struggling to stay on track and tackle procrastination.
+        We attempt to help you study distraction free by getting you to select the websites of your choice that pose the biggest threat to your productivity. We then block these websites until you choose to
+        disable it or until a time which is also chosen by you runs out.
+      </div>
+    </div>
+  </div>
+
+
+  <script src="test.js" charset="utf-8"></script>
 </body>
 </html>
