Changed border-radius for most content + changed FAQ quenstion color.
Also fixed the Lorem Ipsum dummy text I forgot to replace on the news 
page.

--- a/STUDYspace website/index.html
+++ b/STUDYspace website/index.html
@@ -52,7 +52,7 @@ for STUDYspace once it is released!</p>
   <section class = "textblock">
     <div class = "webcheck">
       <input type="checkbox" id = "check">
-      <label for = "check" id = "media">Youtube</label>
+      <label for = "check" id = "media"></label>
     </div>
     <h3>Manual mode</h3>
     <p>The main purpose of using STUDYspace is to allow students to identify their
