--- a/STUDYspace website/news.html
+++ b/STUDYspace website/news.html
@@ -49,7 +49,7 @@
       <div class = "newsbox">
         <a href="blog5.html"><span class = "inspan">19/08/2022:</span></a>
         <h4>Changes to Pomodoro mode</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta voluptatem natus nam temporibus neque at.</p>
+        <p>We have a brand new update regarding STUDYspace's Pomodoro mode. Originally, Pomodoro mode did not show much of a connection to its namesake technique.</p>
       </div>
 
       <div class = "newsbox">
