--- a/STUDYspace website/help.html
+++ b/STUDYspace website/help.html
@@ -37,7 +37,7 @@
 
   <section class = "textblock">
     <h2>Contact us</h2>
-    <form>
+    <form onsubmit = "sendEmail(); reset(); return false;">
       <div class = "half">
         <div class = "item">
           <label for="name"><i class="fam fa-solid fa-user"></i> Your name</label>
@@ -116,6 +116,8 @@
     </div>
   </footer>
 
+  <script src="https://smtpjs.com/v3/smtp.js"></script>
+  <script src="main.js" charset="utf-8"></script>
 
 </body>
 </html>
