Replaced text in FAQ answers & added functionality to timer interactive.

--- a/STUDYspace website/faq.html
+++ b/STUDYspace website/faq.html
@@ -54,23 +54,11 @@
 
       <div class = "accordian-item">
         <button class = "accordian-header">
-          <strong>Why should I use STUDYspace?</strong> <i class="faq fa-solid fa-angle-down"></i>
+          <strong>Why should I use STUDYspace and how does it differ from other productivity sites?</strong> <i class="faq fa-solid fa-angle-down"></i>
         </button>
         <div class="accordian-body">
-          STUDYspace is a procrastination-prevention/productivity program which attempts to help students struggling to stay on track and tackle procrastination.
-          We attempt to help you study distraction free by getting you to select the websites of your choice that pose the biggest threat to your productivity. We then block these websites until you choose to
-          disable it or until a time which is also chosen by you runs out.
-        </div>
-      </div>
-
-      <div class = "accordian-item">
-        <button class = "accordian-header">
-          <strong>How does STUDYspace differ from other productivity browser extensions or apps?</strong> <i class="faq fa-solid fa-angle-down"></i>
-        </button>
-        <div class="accordian-body">
-          STUDYspace is a procrastination-prevention/productivity program which attempts to help students struggling to stay on track and tackle procrastination.
-          We attempt to help you study distraction free by getting you to select the websites of your choice that pose the biggest threat to your productivity. We then block these websites until you choose to
-          disable it or until a time which is also chosen by you runs out.
+          There are plenty of productivity sites out there, but STUDYspace is different. There are Pomodoro timers that do not attempt to reinforce your focused learning, and there are website blockers that have a strict schedule for the day and do not unblock websites or applications until the next day.
+          STUDYspace tries to combine all of these concepts and allow flexibility for any situation you might face! Also, some productivity sites provide users with a free trial before they are required to make monthly payments if they want to keep using their product. Here at STUDYspace we think there should not be a price on progress!
         </div>
       </div>
 
@@ -79,9 +67,7 @@
           <strong>Can I download STUDYspace?</strong> <i class="faq fa-solid fa-angle-down"></i>
         </button>
         <div class="accordian-body">
-          STUDYspace is a procrastination-prevention/productivity program which attempts to help students struggling to stay on track and tackle procrastination.
-          We attempt to help you study distraction free by getting you to select the websites of your choice that pose the biggest threat to your productivity. We then block these websites until you choose to
-          disable it or until a time which is also chosen by you runs out.
+          Not yet. STUDYspace is still currently under development. But feel free to check our <a href="download.html">Download</a> page to see how we imagine the downloading process will go!
         </div>
       </div>
 
@@ -90,9 +76,7 @@
           <strong>Is STUDYspace free?</strong> <i class="faq fa-solid fa-angle-down"></i>
         </button>
         <div class="accordian-body">
-          STUDYspace is a procrastination-prevention/productivity program which attempts to help students struggling to stay on track and tackle procrastination.
-          We attempt to help you study distraction free by getting you to select the websites of your choice that pose the biggest threat to your productivity. We then block these websites until you choose to
-          disable it or until a time which is also chosen by you runs out.
+          Once STUDYspace is released, we intend on it being free to use with no monthly payments or purchases for more perks.
         </div>
       </div>
 
@@ -101,9 +85,7 @@
           <strong>Who is STUDYspace aimed at?</strong> <i class="faq fa-solid fa-angle-down"></i>
         </button>
         <div class="accordian-body">
-          STUDYspace is a procrastination-prevention/productivity program which attempts to help students struggling to stay on track and tackle procrastination.
-          We attempt to help you study distraction free by getting you to select the websites of your choice that pose the biggest threat to your productivity. We then block these websites until you choose to
-          disable it or until a time which is also chosen by you runs out.
+          STUDYspace is designed to help students stay on task and complete their goals, however, this does not mean non-student users cannot use it. There is no age limit to procrastination or how prone you are to distractions, so there is so strict age limit on STUDYspace.
         </div>
       </div>
 
@@ -112,9 +94,7 @@
           <strong>When will STUDYspace be available?</strong> <i class="faq fa-solid fa-angle-down"></i>
         </button>
         <div class="accordian-body">
-          STUDYspace is a procrastination-prevention/productivity program which attempts to help students struggling to stay on track and tackle procrastination.
-          We attempt to help you study distraction free by getting you to select the websites of your choice that pose the biggest threat to your productivity. We then block these websites until you choose to
-          disable it or until a time which is also chosen by you runs out.
+          STUDYspace is still under development, but we plan on having our Browser Extension released some point within the last quarter of 2022. As for the app, this will take longer for us to work on and will probably be available in late 2023 or early 2024.
         </div>
       </div>
 
@@ -123,9 +103,7 @@
           <strong>What if a website I want blocked on STUDYspace is not an option?</strong> <i class="faq fa-solid fa-angle-down"></i>
         </button>
         <div class="accordian-body">
-          STUDYspace is a procrastination-prevention/productivity program which attempts to help students struggling to stay on track and tackle procrastination.
-          We attempt to help you study distraction free by getting you to select the websites of your choice that pose the biggest threat to your productivity. We then block these websites until you choose to
-          disable it or until a time which is also chosen by you runs out.
+          If a website you want blocked is not one of the options listed out on our extension or app, we will have an option for you to manually add urls or app names to our site and we will block it for you. The next time you wish to block the same site it will be waiting there for you. You can also send us an email to recommend websites you would like to be an option on STUDYspace.
         </div>
       </div>
 
@@ -134,9 +112,7 @@
           <strong>Can I make mode or website suggestions for STUDYspace?</strong> <i class="faq fa-solid fa-angle-down"></i>
         </button>
         <div class="accordian-body">
-          STUDYspace is a procrastination-prevention/productivity program which attempts to help students struggling to stay on track and tackle procrastination.
-          We attempt to help you study distraction free by getting you to select the websites of your choice that pose the biggest threat to your productivity. We then block these websites until you choose to
-          disable it or until a time which is also chosen by you runs out.
+          Yes you can! Just email us the name of the website and we will include it as an option in our next update! As for the mode recommendation, if we think the idea is suitable enough for STUDYspace's cause and does not repeat our other modes too much, then we will start brainstorming and previewing content.
         </div>
       </div>
 
@@ -145,9 +121,8 @@
           <strong>How do I set up a STUDYspace account?</strong> <i class="faq fa-solid fa-angle-down"></i>
         </button>
         <div class="accordian-body">
-          STUDYspace is a procrastination-prevention/productivity program which attempts to help students struggling to stay on track and tackle procrastination.
-          We attempt to help you study distraction free by getting you to select the websites of your choice that pose the biggest threat to your productivity. We then block these websites until you choose to
-          disable it or until a time which is also chosen by you runs out.
+          To set up a STUDYspace account you will first need to download our app. Once you have done this you will need to chose 'continue with account' and enter your email address. It is here that we will send you a verification code, and once this is done your STUDYspace account setup will be complete! <br> <br>
+          You can also visit our <a href="download.html">Download</a> page to learn how to set up an account!
         </div>
       </div>
 
@@ -156,9 +131,7 @@
           <strong>Can I switch from using STUDYspace as a guest to creating an account?</strong> <i class="faq fa-solid fa-angle-down"></i>
         </button>
         <div class="accordian-body">
-          STUDYspace is a procrastination-prevention/productivity program which attempts to help students struggling to stay on track and tackle procrastination.
-          We attempt to help you study distraction free by getting you to select the websites of your choice that pose the biggest threat to your productivity. We then block these websites until you choose to
-          disable it or until a time which is also chosen by you runs out.
+          Yes you can! If you join STUDYspace as a guest, you will still have the option to change to an account. It will follow the same process as if you had originally chosen the account option. Read the question above to find out more about account registration.
         </div>
       </div>
 
@@ -167,9 +140,7 @@
           <strong>What is the difference between the STUDYspace app and the browser extension?</strong> <i class="faq fa-solid fa-angle-down"></i>
         </button>
         <div class="accordian-body">
-          STUDYspace is a procrastination-prevention/productivity program which attempts to help students struggling to stay on track and tackle procrastination.
-          We attempt to help you study distraction free by getting you to select the websites of your choice that pose the biggest threat to your productivity. We then block these websites until you choose to
-          disable it or until a time which is also chosen by you runs out.
+          The STUDYspace app and browser extension serves the same purpose: chose a work mode and block websites of your choosing. However, the biggest differences between the two is accounts, save files and data analysis. Save files will save the mode you have used, time (if using Pomodoro mode) and the websites you have blocked. Accounts will ensure you have access to these save files on different devices or if you delete and reinstall the app. Our Data analysis looks at which websites you have blocked the most and which modes you have used the most, as well as how long you have been using STUDYspace. 
         </div>
       </div>
 
@@ -178,9 +149,7 @@
           <strong>Will STUDYspace be available on Mobile?</strong> <i class="faq fa-solid fa-angle-down"></i>
         </button>
         <div class="accordian-body">
-          STUDYspace is a procrastination-prevention/productivity program which attempts to help students struggling to stay on track and tackle procrastination.
-          We attempt to help you study distraction free by getting you to select the websites of your choice that pose the biggest threat to your productivity. We then block these websites until you choose to
-          disable it or until a time which is also chosen by you runs out.
+          STUDYspace will be available on mobile as an app, since our extension is a Google Chrome Browser Extension, which cannot be used on mobile devices. However, the app will be released after the extension.
         </div>
       </div>
     </div>
