--- a/STUDYspace website/index.html
+++ b/STUDYspace website/index.html
@@ -64,17 +64,12 @@ Once the block is activated, users can choose when they want it to be disabled.<
 
   <section class = "textblock">
     <div class = "webcheck" id = "time">
-      <div class = "updown" id = "up">
-        <i class="fan fa-solid fa-angle-up"></i>
-        <i class="fan fa-solid fa-angle-up"></i>
-     </div>
-      <h1>10:00</h1>
-      <div class = "updown" id = "down">
-      <i class="fan fa-solid fa-angle-down"></i>
-      <i class="fan fa-solid fa-angle-down"></i>
-    </div>
-      <button class = "btn">Start</button>
-      <button class = "btn">Pause</button>
+      <h1 id = "count">00:00</h1>
+      <div class = "settime">
+        <input type="number" id = "minute" placeholder="Min" min="0" max="10" value = "">
+        <input type="number" id = "sec" placeholder="Sec" min = "0" max = "60" value = "">
+      </div>
+      <button class = "btn" id = "start">Start</button>
     </div>
     <h3>Timed modes: Pomodoro & Exam mode</h3>
     <p><span class = "outspan"><span class = "inspan">Pomodoro mode</span></span> makes use of the Pomodoro technique. The Pomodoro technique is a popular time management tool which is
