--- a/STUDYspace website/blog1.html
+++ b/STUDYspace website/blog1.html
@@ -94,7 +94,7 @@ STUDYspace as an app after releasing the browser extension and getting some feed
             </div>
             <div class = "msg">
               <div class = "text">Message*</div>
-              <textarea name="Message" placeholder = "Your Message..."></textarea required>
+              <textarea name="Message" placeholder = "Your Message..." required></textarea>
             </div>
             <div class = "sign">
               <button type = "submit">Submit</button>
