--- a/STUDYspace website/blog4.html
+++ b/STUDYspace website/blog4.html
@@ -96,7 +96,7 @@ except google applications will be blocked.</p>
             </div>
             <div class = "msg">
               <div class = "text">Message*</div>
-              <textarea name="Message" placeholder = "Your Message..."></textarea required>
+              <textarea name="Message" placeholder = "Your Message..." required></textarea>
             </div>
             <div class = "sign">
               <button type = "submit">Submit</button>
