--- a/STUDYspace website/faq.html
+++ b/STUDYspace website/faq.html
@@ -140,7 +140,7 @@
           <strong>What is the difference between the STUDYspace app and the browser extension?</strong> <i class="faq fa-solid fa-angle-down"></i>
         </button>
         <div class="accordian-body">
-          The STUDYspace app and browser extension serves the same purpose: chose a work mode and block websites of your choosing. However, the biggest differences between the two is accounts, save files and data analysis. Save files will save the mode you have used, time (if using Pomodoro mode) and the websites you have blocked. Accounts will ensure you have access to these save files on different devices or if you delete and reinstall the app. Our Data analysis looks at which websites you have blocked the most and which modes you have used the most, as well as how long you have been using STUDYspace. 
+          The STUDYspace app and browser extension serves the same purpose: chose a work mode and block websites of your choosing. However, the biggest differences between the two is accounts, save files and data analysis. Save files will save the mode you have used, time (if using Pomodoro mode) and the websites you have blocked. Accounts will ensure you have access to these save files on different devices or if you delete and reinstall the app. Our Data analysis looks at which websites you have blocked the most and which modes you have used the most, as well as how long you have been using STUDYspace.
         </div>
       </div>
 
@@ -200,7 +200,7 @@
               </div>
               <div class = "msg">
                 <div class = "text">Message*</div>
-                <textarea name="Message" placeholder = "Your Message..."></textarea required>
+                <textarea name="Message" placeholder = "Your Message..." required></textarea>
               </div>
               <div class = "sign">
                 <button type = "submit">Submit</button>
