--- a/STUDYspace website/index.html
+++ b/STUDYspace website/index.html
@@ -131,7 +131,7 @@ Once the block is activated, users can choose when they want it to be disabled.<
             </div>
             <div class = "msg">
               <div class = "text">Message*</div>
-              <textarea name="Message" placeholder = "Your Message..."></textarea required>
+              <textarea name="Message" placeholder = "Your Message..." required></textarea >
             </div>
             <div class = "sign">
               <button type = "submit">Submit</button>
