--- a/STUDYspace website/about.html
+++ b/STUDYspace website/about.html
@@ -92,7 +92,7 @@ students around her would go off-task, she decided STUDYspace should be made to 
               </div>
               <div class = "msg">
                 <div class = "text">Message*</div>
-                <textarea name="Message" placeholder = "Your Message..."></textarea required>
+                <textarea name="Message" placeholder = "Your Message..." required></textarea>
               </div>
               <div class = "sign">
                 <button type = "submit">Submit</button>
