--- a/STUDYspace website/blog3.html
+++ b/STUDYspace website/blog3.html
@@ -99,7 +99,7 @@
             </div>
             <div class = "msg">
               <div class = "text">Message*</div>
-              <textarea name="Message" placeholder = "Your Message..."></textarea required>
+              <textarea name="Message" placeholder = "Your Message..." required></textarea>
             </div>
             <div class = "sign">
               <button type = "submit">Submit</button>
